--- a/src/components/topfold/topfold.css
+++ b/src/components/topfold/topfold.css
@@ -45,6 +45,7 @@
     border: 1px solid white;
     font-size: 18px;
     cursor: pointer;
+    color: white;
     padding: 0px 8px;
 }
 
@@ -64,6 +65,7 @@
 .add-topfold-button {
     display: flex;
     align-items: center;
+    color: white;
     font-size: 16px;
     cursor: pointer;
 }
