--- a/src/components/footer/header.css
+++ b/src/components/footer/header.css
@@ -8,4 +8,22 @@ footer {
     justify-content: center;
     align-items: center;
     padding: 6px;
+    margin-bottom: 0;
+}
+
+@media only screen and (max-width: 1024px) {
+    footer {
+        /* padding-bottom: 20px; */
+        padding-right: 10px;
+    }
+}
+
+@media only screen and (max-width: 512px) {
+    footer {
+        /* width: 100 */
+        padding-bottom: 10px;
+        padding: 0px 0px;
+        padding-top: 4px;
+        /* padding-left: 15px; */
+    }
 }
